# CodeRAG

./: .gitignore  README.md
gateway/: Dockerfile  mvnw.cmd  pom.xml
gateway/src/main/java/com/coderag/gateway/: GatewayApplication.java
gateway/src/main/java/com/coderag/gateway/config/: DynamoDbConfig.java  SecurityConfig.java
gateway/src/main/java/com/coderag/gateway/controller/: AuthController.java  ProxyController.java
gateway/src/main/java/com/coderag/gateway/filter/: JwtAuthFilter.java  RateLimitFilter.java
gateway/src/main/java/com/coderag/gateway/util/: JwtUtil.java
gateway/src/main/resources/: application.yml
infra/: AWS_REDEPLOY.md  docker-compose.yml  init.sql  localstack-init.sh
infra/terraform/: compute.tf  database.tf  network.tf  outputs.tf  schedule.tf  secrets.tf  security.tf  terraform.tfvars.example  user-data.sh  variables.tf
rag-pipeline/: .env.example  .gitignore  Dockerfile  pyproject.toml  test_gateway.py
rag-pipeline/src/: __init__.py  chunker.py  config.py  embedder.py  fetcher.py  init_dynamo.py  main.py  retriever.py  storage.py
rag-pipeline/src/api/: app.py  models.py
rag-pipeline/src/api/routers/: chat.py  ingest.py
rag-pipeline/src/dynamo/: __init__.py  client.py  repos.py  sessions.py
rag-pipeline/tests/: test_chunker.py  test_fetcher.py
ui/: next.config.mjs  package-lock.json  package.json
ui/app/: globals.css  layout.js  page.js
ui/app/lib/: api.js
