[project]
name = "code-rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for code repositories — fetch, chunk, embed, search, answer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "langchain>=0.2",
    "langchain-google-genai>=1.0",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "sentence-transformers>=2.2",
    "pgvector>=0.2",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "PyGithub>=2.1",
    "boto3>=1.28",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
